--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "scripts": {
     "start": "node --loader ts-node/esm backend/server.ts",
-    "dev": "npx nodemon --exec \"node --loader ts-node/esm backend/server-minimal.ts\" --ext ts",
+    "dev": "npx nodemon --exec \"node --loader ts-node/esm backend/server.ts\" --ext ts",
     "test-stt": "node --loader ts-node/esm backend/test-stt.ts"
   },
   "author": "Inworld AI",
   "license": "MIT",
-  "description": "Learn Spanish with Inworld Runtime",
+  "description": "Learn Spanish with AI",
   "devDependencies": {
     "@tsconfig/node-lts": "^22.0.2",
     "@types/express": "^4.17.21",
