--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@inworld/runtime": "https://assets.inworld.ai/node-packages/inworld-runtime-0.4.3.tgz",
+    "anki-apkg-export": "^4.0.3",
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "uuid": "^11.1.0",
