--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
 * @inworld-ai/devops
-* @inworld-ai/forward-deploy-engineers
+* @inworld-ai/devops @inworld-ai/forward-deploy-engineers
