--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@inworld/runtime": "^0.5.1-rc.2",
+    "@inworld/runtime": "^0.5.1",
     "anki-apkg-export": "^4.0.3",
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
