--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,37 @@
 {
   "extends": "@tsconfig/node-lts/tsconfig.json",
   "compilerOptions": {
+    "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "lib": ["ES2022"],
+    "outDir": "./dist",
+    "rootDir": "./",
+    "strict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "allowImportingTsExtensions": true,
-    "noEmit": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noEmit": false
   },
   "ts-node": {
     "esm": true
   },
+  "include": ["backend/**/*"],
   "exclude": [
-    "templates/**"
+    "node_modules",
+    "dist",
+    "frontend",
+    "templates/**",
+    "**/*.test.ts",
+    "**/*.spec.ts"
   ]
 }
