--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/backend/server.js",
-    "dev": "npx nodemon --exec \"node --loader ts-node/esm backend/server.ts\" --ext ts",
-    "test-stt": "node --loader ts-node/esm backend/test-stt.ts",
+    "dev": "nodemon --exec \"tsx backend/server.ts\" --ext ts",
+    "test-stt": "tsx backend/test-stt.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
@@ -33,13 +33,12 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
     "@types/ws": "^8.5.12",
-    "concurrently": "^8.2.2",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.10",
     "prettier": "^3.2.5",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.0.0"
   },
