--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "typescript-eslint": "^8.0.0"
   },
   "dependencies": {
-    "@inworld/runtime": "^0.6.4",
+    "@inworld/runtime": "https://assets.inworld.ai/node-packages/inworld-runtime-0.8.0-rc.15.tgz",
     "anki-apkg-export": "^4.0.3",
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
