--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.10",
+    "pino-pretty": "^13.1.3",
     "prettier": "^3.2.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
@@ -47,6 +48,7 @@
     "anki-apkg-export": "^4.0.3",
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
+    "pino": "^10.1.0",
     "uuid": "^11.1.0",
     "ws": "^8.18.0"
   }
