--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "node dist/backend/server.js",
     "dev": "nodemon --exec \"tsx backend/server.ts\" --ext ts",
     "test-stt": "tsx backend/test-stt.ts",
+    "test": "npm run test:backend && npm run test:frontend",
+    "test:backend": "vitest run --config backend/vitest.config.ts",
+    "test:frontend": "npm run test --prefix frontend",
+    "test:watch": "vitest --config backend/vitest.config.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
@@ -28,6 +32,7 @@
     "npm": ">=9.0.0"
   },
   "devDependencies": {
+    "@vitest/coverage-v8": "^2.1.0",
     "@eslint/js": "^9.0.0",
     "@tsconfig/node-lts": "^22.0.2",
     "@types/cors": "^2.8.19",
@@ -40,9 +45,11 @@
     "nodemon": "^3.1.10",
     "pino-pretty": "^13.1.3",
     "prettier": "^3.2.5",
+    "supabase": "^2.70.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "vitest": "^2.1.0"
   },
   "dependencies": {
     "@inworld/runtime": "https://storage.googleapis.com/assets-inworld-ai/node-packages/inworld-runtime-0.9.0-rc.14.tgz",
