Restructured files, decoupled frontend and backend, aligned configuration

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,17 @@
 {
   "name": "language-learning",
   "version": "1.0.0",
-  "main": "dist/backend/server.js",
+  "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/backend/server.js",
-    "dev": "nodemon --exec \"tsx backend/server.ts\" --ext ts",
-    "test-stt": "tsx backend/test-stt.ts",
+    "build": "tsc && cp -r src/prompts dist/prompts",
+    "start": "node dist/server.js",
+    "dev": "nodemon --exec \"tsx src/server.ts\" --ext ts",
+    "test-stt": "tsx test-stt.ts",
     "test": "npm run test:backend && npm run test:frontend",
-    "test:backend": "vitest run --config backend/vitest.config.ts",
-    "test:frontend": "npm run test --prefix frontend",
-    "test:watch": "vitest --config backend/vitest.config.ts",
+    "test:backend": "vitest run --config vitest.config.ts",
+    "test:frontend": "npm run test --prefix ../frontend",
+    "test:watch": "vitest --config vitest.config.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
