--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "bundler",
     "lib": ["ES2022"],
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
@@ -22,13 +22,11 @@
     "noFallthroughCasesInSwitch": true,
     "noEmit": false
   },
-  "include": ["backend/**/*"],
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules",
     "dist",
-    "frontend",
-    "templates/**",
-    "**/*.test.ts",
-    "**/*.spec.ts"
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts"
   ]
 }
